# LLM-Chatbot

./: .gitignore  COVER.md  Makefile  README.md  docker-compose.yml  nginx.conf
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/endpoints/: __init__.py  chat.py  documents.py  health.py  knowledge_base.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/services/: __init__.py  chat_service.py  document_processor.py  groq_llm_service.py  vector_store.py
backend/tests/: test_api.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInterface.tsx  DocumentUpload.tsx  KnowledgeBase.tsx  MessageList.tsx  Sidebar.tsx
frontend/src/contexts/: ChatContext.tsx  DocumentContext.tsx
frontend/src/services/: api.ts
frontend/src/utils/: eventEmitter.ts
